--- a/project.config
+++ b/project.config
@@ -1,20 +1,20 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/mido-gerrithub-sync
+	owner = group user/Agustin Rivero (mido-gerrithub-sync)
 [access "refs/for/refs/*"]
-	read = group user/mido-gerrithub-sync
-	push = group user/mido-gerrithub-sync
-	label-Code-Review = -2..+2 group user/mido-gerrithub-sync
-	label-Verified = -1..+1 group user/mido-gerrithub-sync
-	rebase = group user/mido-gerrithub-sync
-	removeReviewer = group user/mido-gerrithub-sync
-	submit = group user/mido-gerrithub-sync
+	read = group user/Agustin Rivero (mido-gerrithub-sync)
+	push = group user/Agustin Rivero (mido-gerrithub-sync)
+	label-Code-Review = -2..+2 group user/Agustin Rivero (mido-gerrithub-sync)
+	label-Verified = -1..+1 group user/Agustin Rivero (mido-gerrithub-sync)
+	rebase = group user/Agustin Rivero (mido-gerrithub-sync)
+	removeReviewer = group user/Agustin Rivero (mido-gerrithub-sync)
+	submit = group user/Agustin Rivero (mido-gerrithub-sync)
 [access "refs/heads/*"]
-	read = group user/mido-gerrithub-sync
-	create = group user/mido-gerrithub-sync
-	push = +force group user/mido-gerrithub-sync
-	pushMerge = group user/mido-gerrithub-sync
+	read = group user/Agustin Rivero (mido-gerrithub-sync)
+	create = group user/Agustin Rivero (mido-gerrithub-sync)
+	push = +force group user/Agustin Rivero (mido-gerrithub-sync)
+	pushMerge = group user/Agustin Rivero (mido-gerrithub-sync)
 [access "refs/tags/*"]
-	push = group user/mido-gerrithub-sync
-	push = +force group user/mido-gerrithub-sync
+	push = group user/Agustin Rivero (mido-gerrithub-sync)
+	push = +force group user/Agustin Rivero (mido-gerrithub-sync)
